--- a/app/views/group_mailer/signup.html.haml
+++ b/app/views/group_mailer/signup.html.haml
@@ -1,6 +1,6 @@
 %p{ style: "font-size:12px;"} Hi #{@user.name.split.first},
 %p{ style: "font-size:12px;"} 
-  Thanks for signing up for MetaBright! Your plan allows you to have **1 user** on your account. If you'd like to add more users, just go to ***www.metabright.com/groups/name/account***. 
+  Thanks for signing up for MetaBright! Your plan allows you to have #{@group.users.count} on your account. If you'd like to add more users, just go to #{link_to "your account management tab.", account_group_url(@group)}. 
  %p{ style: "font-size: 12px;"} 
 %p{ style: "font-size: 12px;"}
   If you ever have any questions about MetaBright or your plan, you can reach our support team at support@metabright.com.
