group signup email

--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -137,18 +137,18 @@
                     %br 
                     Sales Specialist at LinkedIn
                 .picture{ style: "display: inline-block; float: right"} 
-                  = image_tag "http://m.c.lnkd.licdn.com/media/p/4/000/168/3ed/1a5d167.jpg", class: "img-circle"
+                  = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/nisa.jpg", class: "img-circle"
             .testimonial
               .speech
-                %p.speech.center{ style: "margin: 0 auto 50px;"} "MetaBright is the best site in the entire world. Because of MetaBright, I've found a job, gotten married, and won elected office."
+                %p.speech.center{ style: "margin: 0 auto 50px;"} "Challenges in MetaBright are unbelievably fun. I love competing with others and working my way up the leaderboard."
               %div
                 .bio{ style: "display: inline-block; float: right; margin-top: 25px; width: 94px; margin-left: 12px;"}
                   %p 
-                    Patrick S.
+                    Calvin J.
                     %br 
-                    Vice President of Halliburton
+                    PM, Self-Driving Cars at Google
                 .picture{ style: "display: inline-block; float: right"} 
-                  = image_tag "http://www.inweekly.net/images/articles/articles/full/art_8540_img_hw-profileDr.-R.-Sidney-Stu.jpg", class: "img-circle"
+                  = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/calvin.jpg", class: "img-circle"
 
             .testimonial
               .speech
