--- a/app/views/layouts/mail.html.haml
+++ b/app/views/layouts/mail.html.haml
@@ -14,4 +14,4 @@
             = yield
         %tr
           %td{ style: "padding:3px 12px 6px;"}
-            = render "notification_settings"
+            = render "mailer/notification_settings"
