--- a/app/views/group_mailer/submission.html.haml
+++ b/app/views/group_mailer/submission.html.haml
@@ -1,6 +1,6 @@
 %p{ style: "font-size:12px;"} Hi #{@evaluation.user.name},
 %p{ style: "font-size:12px;"} 
-  #{@evaluation_enrollment.user.name} just completed the #{@evaluation.company} #{@evaluation.title} Evaluation! You can view all your candidates #{link_to "here", group_evaluations_url(@evaluation_enrollment.group)} or view a detailed report of just #{@evaluation_enrollment.user.name}'s score. 
+  #{@user.name} just completed the #{@evaluation.company} #{@evaluation.title} Evaluation! You can view all your candidates #{link_to "here", group_evaluations_url(@evaluation_enrollment.group)} or view a detailed report of just #{@user.name}'s score. 
 %p{ style: "font-size:12px;"} 
   Thanks,
   %br
