--- a/app/views/groups/account.html.haml
+++ b/app/views/groups/account.html.haml
@@ -39,6 +39,6 @@
       %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
       %h2 #{@group.name} Account
       %input{ type: "text", placeholder: "Search account...", id: "account_search" }
-      
     %div.notificationpanelbody.users
       = render "account_table"
+      = link_to "Edit Account Settings", edit_group_url(@group), class: "submit", style: "float: right;"
