--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -2,6 +2,17 @@
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .aboutbox { border-radius: 0; }
   .aboutcontainer { margin-top: 25px; width: 900px; }
+  
+:javascript
+  $(function(){
+    $(".checklist li").click(function(event) {
+      var mb_selected = $(".metabright-challenges input[type=checkbox]:checked").length
+      var custom_selected = $(".custom-challenges input[type=checkbox]:checked").length
+      if((mb_selected + custom_selected) > 5){
+        $(this).find("input[type=checkbox]").prop('checked',false);
+      }
+    })
+  })
 
 #employer.aboutcontainer
   #create_evaluation.aboutbox{ style: "padding: 8px; "}
@@ -27,15 +38,15 @@
                 - if false
                   %div{style: "margin-top:10px;"} Upload job description (optional)
           %div.action_group
-            %h3 What skills do you want evaluated?
+            %h3 What challenges do you want to use?
             %div.tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Choose up to three skills total. Each skill takes less than 10 minutes to complete.
+                Choose up to five challenges total. Each challenge takes less than 15 minutes to complete.
             .challenge_chooser
               %h5 MetaBright Skills
               .challenges
-                %ul.checklist
+                %ul.checklist.metabright-challenges
                   - @public_paths.each do |p|
                     %li
                       %label
@@ -45,7 +56,7 @@
               %h5 Your Custom Skills
               .challenges
                 - if @group_paths.any?
-                  %ul.checklist
+                  %ul.checklist.custom-challenges
                     - @group_paths.each do |p|
                       %li
                         %label
