--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -35,7 +35,7 @@
       %th Name
       %th Email
       %th
-      %th
+      %th= link_to "Edit Account Settings", edit_group_url(@group), class: "submit", style: "float: right;"
   %tbody
     - @users.to_a.each do |u|
       %tr
