--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -43,6 +43,17 @@
               %div{ style: "margin-top: 6px; "}
                 = image_tag LIGHT_BULB_URL, style: "width: 15px; position: relative; bottom: 1px; "
                 %p{ style: "display: inline;"} Make sure there are no spaces or special characters in your URL.
+        %h4 Upgrade Plan Type
+        .editprofilemanagementarea
+          .control-group
+            %label.control-label Upgrade Plan Type
+            .controls
+              = f.select(:plan_type, Group::PLAN_TYPE_LIST)
+            %label.control-label
+            .controls{ style: "margin-top: 10px;"}
+              = link_to "Close your MetaBright account", close_group_url(@group)
+            
+        
         %h4 Group profile info
         .editprofilemanagementarea
           .control-group
@@ -65,4 +76,4 @@
       %div.control-group
         %div.controls
         = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
-        = link_to "Back", group_path(@group.permalink), class: "button button-standard", style: "float: right;"
+        = link_to "Back", account_group_path(@group.permalink), class: "button button-standard", style: "float: right;"
