changes to checkout style

--- a/app/views/groups/signup/checkout.html.haml
+++ b/app/views/groups/signup/checkout.html.haml
@@ -29,7 +29,7 @@
           - plan = Group::PLAN_TYPES[@group.plan_type]
           = f.hidden_field :stripe_token
           %label Product:
-          .product_name{ style: "margin-bottom: 0;"} Evaluator #{plan[:description]}: #{plan[:price]}
+          .product_name Evaluator #{plan[:description]}: #{plan[:price]}
           %p.errors= @error
           %label{ style: "display: inline-block;"} Card Number
           .checkout_tt1
