--- a/app/views/groups/signup/checkout.html.haml
+++ b/app/views/groups/signup/checkout.html.haml
@@ -53,4 +53,4 @@
           
           .control-group
             .controls
-              %input{ type: "submit", value: "Checkout", class: "submit" }
+              %input{ type: "submit", value: "Checkout", class: "submit_button" }
