--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -43,4 +43,4 @@
         = f.password_field :creator_password, placeholder: "Password...", "data-label" => "your password"
         .control-group
           .controls
-            = f.submit "Submit", class: "submit"
+            = f.submit "Submit", class: "submit_button"
