--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -8,6 +8,21 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .profile_dropdown li:hover { color: white; }
 .navbar{ z-index:1010; }
 .container.body { padding-top: 51px; }
+.submit_button {
+  background-color: #e9685b;
+  color: white;
+  float: right;
+  width: inherit;
+  font-weight: normal;
+  box-shadow: none;
+  margin: 0;
+  font-size: 15px;
+  border: none;
+  border-radius: 3px;
+  padding: 7px 20px 5px 20px;
+  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white;}
+  &:active{ position: relative; top: 1px; }
+}
 
 /* Stream/Revolution */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
@@ -954,21 +969,6 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       }
       .control-group {
         margin: 0;
-      }
-      .submit {
-        background-color: #e9685b;
-        color: white;
-        float: right;
-        width: inherit;
-        font-weight: normal;
-        box-shadow: none;
-        margin: 0;
-        font-size: 15px;
-        border: none;
-        border-radius: 3px;
-        padding: 7px 20px 5px 20px;
-        &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); }
-        &:active{ position: relative; top: 1px; }
       }
       .checkout_tt1, .checkout_tt2 {
         display: inline-block;
