--- a/app/views/groups/close.html.haml
+++ b/app/views/groups/close.html.haml
@@ -4,27 +4,37 @@
   .aboutcontainer{ width: 900px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); }
   .aboutbox{ min-height: 600px; border-radius: 0; }
   .aboutbox .header { margin-bottom: 10px;}
-  .aboutbox .header img { height: 72px; margin-top: -15px; }
+  .aboutbox .header img { height: 100px; margin-top: -15px; }
   .aboutbox .header h2 { display: inline-block; font-size: 30px; }
   .aboutbox .header hr { margin: 8px; }
   .aboutbox .header input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
   .aboutbox table { width: 100%; }
   .aboutbox table td { padding: 15px 10px; border-bottom: 1px solid #DDD; line-height: 25px;}
   .aboutbox table td a { font-size: 17px; color: #333; }
+  .dont_go {background-color: rgb(170,0,0); color: white; padding: 12px 20px; margin-bottom: 15px; }
+  .dont_go ul { margin-top: 10px; }
 
 #evaluations_index.aboutcontainer
   .aboutbox
     .header
       = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
-      %h2 Don't Go!
-    .body{ style: "width: 95%" }
+      %h2 Are you sure you want to delete your account?
+    .body{ style: "width: 95%; font-size: 15px;" }
+      .dont_go
+        %h4 Deleting your company's MetaBright account is irreversible. If you decide to leave, the following will be deleted:
+        %ul
+          %li All your group members.
+          %li All your Evaluations.
+          %li All records of people having completed your Evaluations.
+          %li All of your group's custom Challenges.
       %p 
-        Are you sure you want to go? 
-        If so, we'd really appreciate if you'd tell why you're leaving or what about MetaBright didn't work for you.
+        If you're having any problems with your account, we'd be happy to work through them with you. Feel free to reach out to us at
+        %a{ href: "mailto:support@metabright.com"} support@metabright.com.
+      %p And if you're absolutely certain you want to permanently delete your account, please let us know why you're leaving so we can do better the next time.  
       = form_for(@group, url: close_group_url(@group), method: :put) do |f|
         .control-group
           .controls
             = f.text_area :closed_reason, style: "width: 100%; height: 100px;"
         .control-group
           .controls
-            = f.submit "Close Account", class: "submit", style: "float: right;"
+            = f.submit "Close Account", class: "submit_button", style: "float: right;"
