Fixing account plan restrictions.

--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -48,7 +48,7 @@
           .control-group
             %label.control-label Upgrade Plan Type
             .controls
-              = f.select(:plan_type, Group::PLAN_TYPE_LIST)
+              = f.select(:plan_type, Group::ACTIVE_PLAN_TYPE_LIST)
             %label.control-label
             .controls{ style: "margin-top: 10px;"}
               = link_to "Close your MetaBright account", close_group_url(@group)
