--- a/app/views/groups/close.html.haml
+++ b/app/views/groups/close.html.haml
@@ -2,7 +2,7 @@
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .container.body { width: inherit; }
   .aboutcontainer{ width: 900px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); }
-  .aboutbox{ min-height: 600px; border-radius: 0; }
+  .aboutbox{ border-radius: 0; }
   .aboutbox .header { margin-bottom: 10px;}
   .aboutbox .header img { height: 100px; margin-top: -15px; }
   .aboutbox .header h2 { display: inline-block; font-size: 30px; }
@@ -14,19 +14,25 @@
   .dont_go {background-color: rgb(170,0,0); color: white; padding: 12px 20px; margin-bottom: 15px; }
   .dont_go ul { margin-top: 10px; }
 
+:javascript
+  $(function(){
+    $('.textfill').textfill({ maxFontPixels: 30 });
+  });
+
 #evaluations_index.aboutcontainer
   .aboutbox
     .header
       = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
-      %h2 Are you sure you want to delete your account?
-    .body{ style: "width: 95%; font-size: 15px;" }
+      %h2.textfill 
+        %span Delete the #{@group.name} account?
+    .body{ style: "padding: 0 18px; font-size: 15px;" }
       .dont_go
         %h4 Deleting your company's MetaBright account is irreversible. If you decide to leave, the following will be deleted:
         %ul
-          %li All your group members.
-          %li All your Evaluations.
-          %li All records of people having completed your Evaluations.
-          %li All of your group's custom Challenges.
+          %li All your company's members.
+          %li All your company's Evaluations.
+          %li All records of people having completed your company's Evaluations.
+          %li All of your company's custom Challenges.
       %p 
         If you're having any problems with your account, we'd be happy to work through them with you. Feel free to reach out to us at
         %a{ href: "mailto:support@metabright.com"} support@metabright.com.
@@ -37,4 +43,4 @@
             = f.text_area :closed_reason, style: "width: 100%; height: 100px;"
         .control-group
           .controls
-            = f.submit "Close Account", class: "submit_button", style: "float: right;"
+            = f.submit "Close Account", class: "submit_button", style: "float: right; margin-bottom: 20px;"
