--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -107,9 +107,7 @@
       }
       
       function stopSpinner(){
-        if(disabled_button != false){
-          $(this).removeClass("disabled").removeAttr("disabled");
-        }
+        $('.disabled').removeClass("disabled").removeAttr("disabled");
         $('#page_loading').hide();
       }
       
