--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -6,28 +6,29 @@
     $(this).click(function(){$('#group_admin_modal').modal({show: true, keyboard: true, static: true});});
   });
 
-%div#group_admin_modal.modal.hide.fade{ style: "top: 10%; margin-top: 0px; width: 600px;" }
-  %div.modal-header
-    %a.close
-    %h3 Edit User
-  %div.modal-body{ style: "max-height: none; "}
-    = form_for(@users.to_a, html: { class: "form-horizontal" }) do |f|
-      = hidden_field_tag :redirect_uri, account_group_url(@group)
-      %div.control-group
-        %label.control-label Name
-        %div.controls= f.text_field :name
-      %div.control-group
-        %label.control-label Email
-        %div.controls= f.text_field :email
-      %div.control-group
-        %label.control-label Reset Password
-        %div.controls= f.password_field :password
-      %div.control-group
-        %label.control-label Confirm Password
-        %div.controls= f.password_field :password_confirmation
-      %div{ style: "float:right;" }
-        %span.button.button-standard{ onclick: "$('#group_admin_modal').modal('hide');" } Close
-        = f.submit "Save", class: "button button-actionable", style: "margin-right: 10px;"
+- @users.each do |user|
+  %div.group_admin_modal.modal.hide.fade{ style: "top: 10%; margin-top: 0px; width: 600px;", data: { user: user.id } }
+    %div.modal-header
+      %a.close
+      %h3 Edit User
+    %div.modal-body{ style: "max-height: none; "}
+      = form_for(user, html: { class: "form-horizontal" }) do |f|
+        = hidden_field_tag :redirect_uri, account_group_url(@group)
+        %div.control-group
+          %label.control-label Name
+          %div.controls= f.text_field :name
+        %div.control-group
+          %label.control-label Email
+          %div.controls= f.text_field :email
+        %div.control-group
+          %label.control-label Reset Password
+          %div.controls= f.password_field :password
+        %div.control-group
+          %label.control-label Confirm Password
+          %div.controls= f.password_field :password_confirmation
+        %div{ style: "float:right;" }
+          %span.button.button-standard{ onclick: "$(this).parents('.modal').modal('hide');" } Close
+          = f.submit "Save", class: "button button-actionable", style: "margin-right: 10px;"
         
 %table.table
   %thead
@@ -42,7 +43,7 @@
         %td= truncate(u.name, length: 30)
         %td= truncate(u.email, length:25)
         %td{ style: "text-align: right;" } Joined #{u.created_at.strftime("%m/%d/%Y")}
-        %td.edit_user_details_link{ onclick: "$('#group_admin_modal').modal({keyboard: true, show: true})", style: "text-align: right; cursor: pointer;" }
+        %td.edit_user_details_link{ onclick: "$('.group_admin_modal[data-user=#{u.id}]').modal({keyboard: true, show: true})", style: "text-align: right; cursor: pointer;" }
           %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", title:"Settings", alt: "Settings"}
     - if @users.empty?
       %tr
