--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -22,7 +22,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    left: 105px;
+    left: 101px;
     top: 102px;
     border: 25px solid;
     border-color: #666 transparent transparent #666;
@@ -32,7 +32,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    left: 114px;
+    left: 110px;
     top: 102px;
     border: 15px solid;
     border-color: #fff transparent transparent #fff;
@@ -42,7 +42,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    right: 106px;
+    right: 110px;
     top: 102px;
     border: 25px solid;
     border-color: #666 #666 transparent transparent;
@@ -52,7 +52,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    right: 114px;
+    right: 118px;
     top: 102px;
     border: 15px solid;
     border-color: #fff #fff transparent transparent;
@@ -62,7 +62,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    right: 81px;
+    right: 85px;
     top: 102px;
     border: 48px solid;
     border-color: #666 transparent transparent transparent;
@@ -72,7 +72,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    right: 94px;
+    right: 99px;
     top: 102px;
     border: 34px solid;
     border-color: #fff transparent transparent transparent;
@@ -131,36 +131,35 @@
               .speech
                 %p.speech.right "Talk about a time saver. MetaBright is a great talent screener. I never have to wonder if someone has the skills necessary to do the job."
               %div
-                .bio{ style: "display: inline-block; float: right; margin-top: 25px; width: 94px; margin-left: 12px;"}
+                .bio
                   %p 
                     Nisa Q.
                     %br 
                     Sales Specialist at LinkedIn
-                .picture{ style: "display: inline-block; float: right"} 
+                .picture
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/nisa.jpg", class: "img-circle"
             .testimonial
               .speech
-                %p.speech.center{ style: "margin: 0 auto 50px;"} "Challenges in MetaBright are unbelievably fun. I love competing with others and working my way up the leaderboard."
+                %p.speech.center{ style: "margin: 0 auto 50px;"} "MetaBright's approach to assessing an individual's strengths and weaknesses brings a whole new level of analytical riguor to hiring."
+                %div
+                  .bio
+                    %p 
+                      Val L.
+                      %br 
+                      Consultant at a Global Consulting Firm
+                  .picture
+                    = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/val.jpg", class: "img-circle"
+            .testimonial
+              .speech
+                %p.speech.left{ style: "float: right; "} "MetaBright Challenges are a blast. I love that as I compete on MetaBright, I'm validating my professional credentials."
               %div
-                .bio{ style: "display: inline-block; float: right; margin-top: 25px; width: 94px; margin-left: 12px;"}
+                .bio
                   %p 
                     Calvin J.
                     %br 
                     PM, Self-Driving Cars at Google
-                .picture{ style: "display: inline-block; float: right"} 
+                .picture 
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/calvin.jpg", class: "img-circle"
-
-            .testimonial
-              .speech
-                %p.speech.left{ style: "float: right; "} "MetaBright's analytical tools are amazing. They accurately summarize people's strengths and weaknesses across a wide variety of skills."
-                %div
-                  .bio{ style: "display: inline-block; float: right; margin-top: 25px; width: 94px; margin-left: 12px;"}
-                    %p 
-                      Kat P.
-                      %br 
-                      Former Analyst at Google
-                  .picture{ style: "display: inline-block; float: right"} 
-                    = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/kat.jpg", class: "img-circle"
           
   #challenge_showcase.row-fluid
     .container
