--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1847,6 +1847,39 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       button { margin-top: 37px; }
     }
   }
+  .body {
+    font-size: 15px; 
+    h3 {
+      
+    }
+    p {
+      font-sie: 15px; 
+      margin-top: 12px;
+    }
+    ul {
+      margin: 15px 10px;
+      list-style: none;
+      
+      li {
+        margin: 16px 20px;
+        line-height: 22px;
+        
+        .picture {
+          width: 83px;
+          margin-top: 7px;
+          display: inline-block; 
+          vertical-align: top; 
+          img { }
+        }
+        .text {
+            display: inline-block; 
+            width: 86%;
+          
+            span { font-family: 'MuliRegular'; }
+        }
+      }
+    }
+  }
 }
 
 
