--- a/app/views/groups/signup/order_confirmation.html.haml
+++ b/app/views/groups/signup/order_confirmation.html.haml
@@ -18,9 +18,25 @@
         %textarea{ rows: "3" }
         %button.submit_button Invite
     .body
-      %h4 
-        Congratulations! You've just made a great decision to start sourcing and validating your candidates in a quicker and more streamlined way. Take a look at the nav bar at the top of the page. Here's a quick look at what everything does:
-        %ul 
-          %li Evaluations: This is where you create and manage all your Evaluations. Your candidates' results are organized here as well.
-          %li Challenges: If you want to test your candidates on custom content specific to your company, you'll want to start here. After you create a Challenge, you can access it in any Evaluation you set up.
-          %li Account: Details of your company plan and settings are located here. You can invite additional people to your account, change your plan, and even add custom CSS styles to your Evaluations.
+      %h3 Your company's hiring is about to get turbocharged!
+      %p Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
+      %ul 
+        %li 
+          .picture
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/evaluations_dark.png" }
+          .text
+            %span Evaluations: 
+            This is where you create and manage all your Evaluations. Your candidates' results are organized here as well.
+        %li 
+          .picture
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/challenges_dark.png" }
+          .text
+            %span Challenges: 
+            If you want to test your candidates on custom content specific to your company, you'll want to start here. After you create a Challenge, you can access it in any Evaluation you set up.
+        %li 
+          .picture
+            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/account_dark.png" }
+          .text
+            %span Account: 
+            Details of your company plan and settings are located here. You can invite additional people to your account, change your plan, and even add custom CSS styles to your Evaluations.
+      %p If you need help getting going, have a question, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
