--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,15 +1,16 @@
 %nav.navbar.navbar-fixed-top
   %div.fill.navbar-inner{ style: "height: 100%;" }
     %div{ style: "margin-left: 6%; height: 100%; width: 90%; margin: 0 auto;" }
-      %div.brand{ style: "padding-top: 3px; width: 150px;" }
+      %div.new-brand.brand
         = link_to root_url do
-          - if params[:new_logo]
-            -#
-          - else
-            = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
+          = image_tag(STONEY_SMALL_URL)
+          %h1 MetaBright
+      %div.brand.old-brand{ style: "padding-top: 3px; width: 150px;" }
+        = link_to root_url do
+          = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
       - if current_user and show_nav_bar
         - if @admin_group
-          %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25;" }
+          %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid rgba(255,255,255,0.2);" }
             %li.navitem{ title: "Evaluations", style: "height: 100%; border-left: 1px solid #56698B;" }
               = link_to group_evaluations_path(@admin_group) do
                 = image_tag NAVBAR_EVALUATIONS,  alt: "Evaluations"
@@ -33,7 +34,7 @@
                 = image_tag NAVBAR_API, alt: "Search"  
                 %span Search
         - else
-          %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25; border-right: 1px solid #56698B;" }
+          %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid rgba(255,255,255,0.2); border-right: 1px solid #56698B;" }
             %li.navitem{ title: "Home", style: "height: 100%; border-left: 1px solid #56698B;" }
               = link_to root_url do
                 = image_tag NAVBAR_HOME,  alt: "Home"
@@ -61,54 +62,61 @@
                 - if current_user.guest_user?
                   %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:2px; margin-right: 17px; text-shadow:none; color:white;" } Sign up
                 - else
+                  - groups = @groups if not @admin_group and (@groups and @groups.size > 0)
+                  - enrollments = current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").to_a
+                  - enrollments = nil if enrollments.empty?
                   %a.dropdown-toggle{ "data-toggle" => "dropdown"}
                     = image_tag current_user.picture, style: "width: 17px; height: 17px; vertical-align: middle;", alt: "#{@current_user.name}"
-                    %span.users_name{ style: "vertical-align: middle;" }= current_user.name 
-                    %span.caret
-                %ul.dropdown-menu{ role: "button", style: "padding: 0; top:38px; right:-136px; min-width: 312px; min-height: 135px;" }
-                  %div
-                    %div.nub{ style: "left:150px;" }
-                  - if @groups and @groups.size > 0                    
-                    %div.leftboxheader Your Groups
-                    %div.leftboxfooter{style:"padding:0; background-color:white; border-bottom: 1px solid #DDD;"}
-                      - @groups.each do |group|
-                        = link_to root_url(g: group.id), style: "text-decoration: none; padding: 0;" do
-                          %div.singlegroupentry{ style: "padding: 6px 12px; "}
-                            = image_tag group.picture, style: "display: inline-block; height: 50px; width: 50px;", class: "img-circle"
-                            %div{ style: "margin-left: 5px; display: inline-block; color: gray; vertical-align: middle; "}
-                              %div{ style: "font-size: 20px; line-height: 23px; "} #{truncate(group.name, length:22, separator: ' ')}
-                              %div{ style: "font-size: 13px; "} #{truncate(group.description, length: 41, separator: ' ')}
-                  - unless @groups
-                    %div.leftboxheader Your Challenges
-                    %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
-                      - current_user.enrollments.includes(:path).where("total_points > 0").order("total_points DESC").each do |e|
-                        = link_to challenge_path(e.path.permalink), style:"padding:0;" do
-                          %div.singleprogressentry
-                            = image_tag e.path.image, style: "width: 50px; height: 50px;", alt: "#{e.path.name}"            
-                            %div.challengeprogress
-                              %span{ style: "font-size:18px;"} #{truncate(e.path.name,length: 18, separator: ' ')}
-                              %span{style: "font-size:14px; float:right; "} Level #{e.level}
-                              %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} #{e.points_to_next_level} more points to level up!
-                              %div.progress.progress-info
-                                %div.bar{ style: "width: #{e.level_percent}%;"}
+                    %span.users_name{ style: "vertical-align: middle;" }= current_user.name
+                    - if groups or enrollments
+                      %span.caret
+                - if groups or enrollments
+                  %ul.dropdown-menu{ role: "button", style: "padding: 0; top:38px; right:-136px; min-width: 312px; min-height: 135px;" }
+                    %div
+                      %div.nub{ style: "left:150px;" }
+                    - if groups
+                      %div.leftboxheader Your Groups
+                      %div.leftboxfooter{style:"padding:0; background-color:white; border-bottom: 1px solid #DDD;"}
+                        - @groups.each do |group|
+                          = link_to root_url(g: group.id), style: "text-decoration: none; padding: 0;" do
+                            %div.singlegroupentry{ style: "padding: 6px 12px; "}
+                              = image_tag group.picture, style: "display: inline-block; height: 50px; width: 50px;", class: "img-circle"
+                              %div{ style: "margin-left: 5px; display: inline-block; color: gray; vertical-align: middle; "}
+                                %div{ style: "font-size: 20px; line-height: 23px; "} #{truncate(group.name, length:22, separator: ' ')}
+                                %div{ style: "font-size: 13px; "} #{truncate(group.description, length: 41, separator: ' ')}
+                    - if enrollments
+                      %div.leftboxheader Your Challenges
+                      %div.leftboxfooter{style:"padding:0; background-color:white; max-height: 412px; overflow-y:auto;"}
+                        - enrollments.each do |e|
+                          = link_to challenge_path(e.path.permalink), style:"padding:0;" do
+                            %div.singleprogressentry
+                              = image_tag e.path.image, style: "width: 50px; height: 50px;", alt: "#{e.path.name}"            
+                              %div.challengeprogress
+                                %span{ style: "font-size:18px;"} #{truncate(e.path.name,length: 18, separator: ' ')}
+                                %span{style: "font-size:14px; float:right; "} Level #{e.level}
+                                %span{ style: "position:relative; bottom:3px;display:block; line-height:16px;"} #{e.points_to_next_level} more points to level up!
+                                %div.progress.progress-info
+                                  %div.bar{ style: "width: #{e.level_percent}%;"}
             %li
+              - notifications = notifications.to_a
               %div.dropdown.pull-right.notification-icon{ style: "padding-top: 11px;" }
                 %a.dropdown-toggle{ "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();", style: "padding:10px;" }
                   = image_tag ICON_NOTIFICATIONS, style: "width: 18px; height: 18px;", title: "Notifications", alt: "Notifications"
                   - if unread_notification_count > 0
                     %span.notifications_bubble= unread_notification_count
-                %ul.dropdown-menu{ role: "button", style: "padding: 0 0 10px 0; top:42px; right:-104px; min-width: 317px; min-height: 135px;" }
-                  %div
-                    %div.nub
-                  %div.leftboxheader Notifications
-                  %div.leftboxfooter{style: "padding: 0;background-color: white;max-height: 352px;overflow-y: auto;"}
-                    - notifications.each do |event|
-                      %li.notification_space
-                        %div.notification{ class: "#{event.read_at ? '' : 'notification-unread'}" }
-                          %a{ href: event.link }
-                            %img.photo{ src: event.image_link, style: "width:35px; height: 35px;", alt: "Notification" }
-                            %p.notification_body= event.content
-                            %p.notification_time #{time_ago_in_words(event.created_at)} ago
+                - if notifications.any?
+                  %ul.dropdown-menu{ role: "button", style: "padding: 0 0 10px 0; top:42px; right:-104px; min-width: 317px; min-height: 135px;" }
+                    %div
+                      %div.nub
+                    %div.leftboxheader Notifications
+                    %div.leftboxfooter{style: "padding: 0;background-color: white;max-height: 352px;overflow-y: auto;"}
+                      - notifications.each do |event|
+                        %li.notification_space
+                          %div.notification{ class: "#{event.read_at ? '' : 'notification-unread'}" }
+                            %a{ href: event.link }
+                              %img.photo{ src: event.image_link, style: "width:35px; height: 35px;", alt: "Notification" }
+                              %p.notification_body= event.content
+                              %p.notification_time #{time_ago_in_words(event.created_at)} ago
             %li
               %div.dropdown.pull-right.notification-icon{ style: "padding-top:9px;" }
                 %a.dropdown-toggle{ "data-toggle" => "dropdown", style: "padding:10px;" }
@@ -136,7 +144,7 @@
             %li
               %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
       - elsif current_user and params[:controller] == "sections" and params[:action] != "new"
-        %ul.nav.pull-right{ style: "float:right; margin-right: 175px;" }
+        %ul.nav.pull-right{ style: "float:right;" }
           %li
             %div{ style: "width: 300px; margin-top: 2px;"}
               = image_tag @path.image, style: "width: 32px; height: 32px; margin-top: 2px;", alt: "#{@path.name}"            
