Switching in upheaval, removing flat navbar.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar.navbar-fixed-top
   %div.fill.navbar-inner{ style: "height: 100%;" }
     %div{ style: "margin-left: 6%; height: 100%; width: 90%; margin: 0 auto;" }
-      %div.new-brand.brand
+      %div.new-brand.brand{ style: "display: none;" }
         = link_to root_url do
           = image_tag(STONEY_SMALL_URL)
           %h1 MetaBright
