--- a/app/views/evaluations/grade.html.haml
+++ b/app/views/evaluations/grade.html.haml
@@ -78,20 +78,21 @@
                 .text
                   MetaPercentile Ranking
                   - if r[:metascore_available]
-                    
-                    :css
-                      .text [data-tip]:after { width: 276px; height: 127px; top: 23px; left:-20px; white-space: normal;}
-                      .text [data-tip]:before { left: 3px; }
+                    .ma_avail{ style: "display: inline-block;" }
+                      :css
+                        .ma_avail [data-tip]:after { width: 276px; height: 127px; top: 23px; left:-20px; white-space: normal;}
+                        .ma_avail [data-tip]:before { left: 3px; }
                       
-                    .tip-below{ style: "display: inline-block;", data: {tip: "This is the percentile ranking for your candidate in this Challenge. Our percentile algorithm approximates how talented this person is compared to all other people who have also completed this Challenge. For example, a score of 97 would mean we estimate this person to be more adept that 97% of the other people who have taken this Challenge."}}
-                      %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px;"}
+                      .tip-below{ style: "display: inline-block;", data: {tip: "This is the percentile ranking for your candidate in this Challenge. Our percentile algorithm approximates how talented this person is compared to all other people who have also completed this Challenge. For example, a score of 97 would mean we estimate this person to be more adept that 97% of the other people who have taken this Challenge."}}
+                        %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px;"}
                   - else
-                    :css
-                      .text [data-tip]:after { width: 210px; height: 54px; top: 23px; left:-20px; white-space: normal;}
-                      .text [data-tip]:before { left: 3px; }
+                    .ma_unavail{ style: "display: inline-block;" }
+                      :css
+                        .ma_unavail [data-tip]:after { width: 210px; height: 54px; top: 23px; left:-20px; white-space: normal;}
+                        .ma_unavail [data-tip]:before { left: 3px; }
                       
-                    .tip-below{ style: "display: inline-block;", data: {tip: "Not enough data. There needs to be at least 20 participants in a Challenge to calculate percentile rankings."}}
-                      %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px;"}
+                      .tip-below{ style: "display: inline-block;", data: {tip: "Not enough data. There needs to be at least 20 participants in a Challenge to calculate percentile rankings."}}
+                        %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png", style: "width: 16px; height: 16px; display: inline-block; margin-bottom: 3px;"}
               %table.table.overview
                 %tbody
                 %tr
