--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -135,7 +135,7 @@
                   %p 
                     Nisa Q.
                     %br 
-                    Sales Specialist at LinkedIn
+                    Recruiting at LinkedIn
                 .picture
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/nisa.jpg", class: "img-circle"
             .testimonial
