--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -85,13 +85,15 @@
               .challenge_card
                 = image_tag p.picture
                 %h5= truncate(p.name, length: 22, separator: ' ')
-                - if current_user
+                - if current_user and not current_user.country.nil?
                   - status = @evaluation.user_status(current_user, p)
                   - if status == :start or status == :continue
                     - evaluation_completed = false
                     = link_to status.to_s.humanize, continue_evaluation_path(@evaluation.id, p.id), class: "button button-small button-actionable"
                   - else
                     %div Completed
+                - elsif current_user
+                  = link_to "Enter Location", "", class: "button button-small button-actionable disabled"
                 - else
                   = link_to "Signup to Begin", "", class: "button button-small button-actionable disabled"
       .step
